--- a/styles/style.css
+++ b/styles/style.css
@@ -80,21 +80,20 @@ body {
 }
 
 .app-right{
-    width: 45%;
-    height: 600px;
+    width: 50%;
+    height: 700px;
     box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.528); 
     border-radius: 20px;
     background: rgba(239, 213, 183, 0.7);
     backdrop-filter: blur(2px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    font-size: 25px;
+    justify-content: space-between;
+    font-size: 20px;
 }
 
 .glass-configuration{
     width: 90%;
-    height: 450px;
     display: flex;
     flex-direction: column;
     margin-left: 15px;
@@ -110,6 +109,34 @@ body {
     width: 40px;
     height: 40px;
 
+}
+
+.css-code-container{
+    width: 100%;
+    height: fit-content;
+    box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.528); 
+    border-radius: 20px;
+    background: rgba(239, 213, 183, 0.7);
+    backdrop-filter: blur(2px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 70px;
+
+}
+
+.css-code-container > p{
+    color: var(--dark-gray);
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 15px;
+}
+
+.css-code > p{
+    color: var(--dark-gray);
+    font-size: 17px;
+    font-weight: 600;
+    margin-left: 15px;
 }
 
 output{
@@ -183,9 +210,3 @@ input[type=range]::-ms-track {
     height: 3px;
 }
 
-.css-code-container{
-    width: 450px;
-    height: 250px;
-    background: var(--dark)
-    
-}
