--- a/styles/style.css
+++ b/styles/style.css
@@ -281,6 +281,7 @@ input[type=range]::-ms-track {
 .css-code > p{
     font-size: 12px;
     margin-top: -5px;
+    line-height: 10px;
 }
 
 .info-css{
